--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "new",
-  "homepage": "https://bhar88.github.io/react-portfolio/",
+  "homepage": "https://bhar88.github.io/react-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "gh": "^2.8.9",
+    "gh-pages": "^5.0.0",
     "pages": "^0.0.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -43,5 +44,4 @@
       "last 1 safari version"
     ]
   }
-
 }
